# couponCodesRustImplementation

./: Cargo.toml  README.md  coupon-gen-instructions.md
src/: exporter.rs  generator.rs  lib.rs  main.rs  ui.rs
tests/: exporter_tests.rs  generator_tests.rs
