[package]
name = "coupon-generator"
version = "0.1.0"
edition = "2021"

[dependencies]
rayon = "1.11"
dashmap = "6"
rand = "0.10"
rust_xlsxwriter = "0.94"
eframe = "0.33"
dirs = "6"
rfd = "0.17.2"
chrono = "0.4.44"

[dev-dependencies]
tempfile = "3"
quick-xml = "0.39"
zip = "7.2"

[profile.release]
opt-level = 3
lto = true

[package.metadata.bundle]
name = "Coupon Generator"
identifier = "com.yourcompany.coupongenerator"
